--- a/src/pages/styles/homepage.css
+++ b/src/pages/styles/homepage.css
@@ -87,6 +87,17 @@
 }
 
 .homepage-after-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.homepage-skills,
+.homepage-works {
+    flex: 1;
+}
+
+/* .homepage-after-title {
 	display: flex;
 }
 
@@ -95,20 +106,10 @@
 	padding-top: 40px;
 }
 
-.homepage-articles {
-	flex-basis: 900px;
-	padding-top: 30px;
-	margin-left: -30px;
-}
-
-.homepage-article {
-	padding-bottom: 5px;
-}
-
 .homepage-works {
 	flex-basis: 600px;
 	padding-top: 30px;
-}
+} */
 
 @media (max-width: 1024px) {
 	.homepage-first-area {
